<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina4_7" orientation="portrait" appearance="dark"/>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
        <capability name="Named colors" minToolsVersion="9.0"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="System colors in document resources" minToolsVersion="11.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Movie Quiz View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="MovieQuizViewController" customModule="MovieQuiz" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="fFq-hE-6Yv">
                                <rect key="frame" x="20" y="10" width="335" height="637"/>
                                <subviews>
                                    <stackView opaque="NO" contentMode="top" verticalCompressionResistancePriority="749" distribution="fillEqually" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="kCP-00-GcQ">
                                        <rect key="frame" x="0.0" y="0.0" width="335" height="20.5"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Вопрос" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xxv-rY-1l8" customClass="UILabelTheme" customModule="MovieQuiz" customModuleProvider="target">
                                                <rect key="frame" x="0.0" y="0.0" width="167.5" height="20.5"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                <color key="textColor" name="default"/>
                                                <color key="highlightedColor" name="default"/>
                                            </label>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1/10" textAlignment="right" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jlz-Sm-pAg" customClass="UILabelTheme" customModule="MovieQuiz" customModuleProvider="target">
                                                <rect key="frame" x="167.5" y="0.0" width="167.5" height="20.5"/>
                                                <accessibility key="accessibilityConfiguration" identifier="index"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                <color key="textColor" name="default"/>
                                                <color key="highlightedColor" name="default"/>
                                            </label>
                                        </subviews>
                                    </stackView>
                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" verticalCompressionResistancePriority="749" image="Background" translatesAutoresizingMaskIntoConstraints="NO" id="2fP-IF-Jbs">
                                        <rect key="frame" x="0.0" y="40.5" width="335" height="476"/>
                                        <color key="backgroundColor" name="backgroundImage"/>
                                        <accessibility key="accessibilityConfiguration" identifier="poster"/>
                                        <constraints>
                                            <constraint firstAttribute="width" relation="lessThanOrEqual" secondItem="2fP-IF-Jbs" secondAttribute="height" multiplier="2:3" priority="750" id="bIp-kb-eAA"/>
                                        </constraints>
                                    </imageView>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="scaleAspectFit" text="Question " textAlignment="center" lineBreakMode="headTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FFA-Mx-yNc">
                                        <rect key="frame" x="0.0" y="536.5" width="335" height="20.5"/>
                                        <accessibility key="accessibilityConfiguration" identifier="question"/>
                                        <rect key="contentStretch" x="0.0" y="0.14999999999999999" width="1" height="1"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <color key="textColor" name="default"/>
                                        <nil key="highlightedColor"/>
                                        <size key="shadowOffset" width="0.0" height="0.0"/>
                                    </label>
                                    <stackView opaque="NO" contentMode="scaleAspectFill" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="aCb-am-HGv">
                                        <rect key="frame" x="0.0" y="577" width="335" height="60"/>
                                        <subviews>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dnn-xf-hRH" customClass="UIButtonTheme" customModule="MovieQuiz" customModuleProvider="target">
                                                <rect key="frame" x="0.0" y="0.0" width="157.5" height="60"/>
                                                <color key="backgroundColor" name="default"/>
                                                <accessibility key="accessibilityConfiguration" identifier="no"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                <state key="normal" title="Нет"/>
                                                <connections>
                                                    <action selector="falseButtonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="P2E-NM-GZ7"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="W6D-E8-qoe" customClass="UIButtonTheme" customModule="MovieQuiz" customModuleProvider="target">
                                                <rect key="frame" x="177.5" y="0.0" width="157.5" height="60"/>
                                                <color key="backgroundColor" name="default"/>
                                                <accessibility key="accessibilityConfiguration" identifier="yes"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="60" id="JZs-uf-kcI"/>
                                                </constraints>
                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                <state key="normal" title="Да"/>
                                                <connections>
                                                    <action selector="trueButtonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="FWY-XV-jrR"/>
                                                </connections>
                                            </button>
                                        </subviews>
                                    </stackView>
                                </subviews>
                            </stackView>
                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="ZFX-QN-O2R">
                                <rect key="frame" x="177.5" y="323.5" width="20" height="20"/>
                            </activityIndicatorView>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                        <color key="backgroundColor" systemColor="systemGray6Color"/>
                        <constraints>
                            <constraint firstItem="ZFX-QN-O2R" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="FOJ-J1-aZ5"/>
                            <constraint firstItem="fFq-hE-6Yv" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="20" id="HUm-0h-Ph9"/>
                            <constraint firstItem="fFq-hE-6Yv" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="10" id="VAH-hO-VEh"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="fFq-hE-6Yv" secondAttribute="bottom" constant="20" id="hdY-hT-1xH"/>
                            <constraint firstItem="ZFX-QN-O2R" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="l4H-Ye-zH0"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="fFq-hE-6Yv" secondAttribute="trailing" constant="20" id="rGt-cg-JNn"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="activityIndicator" destination="ZFX-QN-O2R" id="mch-75-wXH"/>
                        <outlet property="falseButton" destination="dnn-xf-hRH" id="TWh-KB-L9c"/>
                        <outlet property="quizImageView" destination="2fP-IF-Jbs" id="Bv7-tK-sLf"/>
                        <outlet property="quizQuestionLabel" destination="FFA-Mx-yNc" id="xCG-c4-dfP"/>
                        <outlet property="quizStepsLabel" destination="Jlz-Sm-pAg" id="CRz-rl-aVa"/>
                        <outlet property="trueButton" destination="W6D-E8-qoe" id="gaZ-4Y-quF"/>
                        <outlet property="viewContainer" destination="8bC-Xf-vdC" id="CwS-EI-fMD"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-56.074766355140184" y="55.075593952483807"/>
        </scene>
    </scenes>
    <resources>
        <image name="Background" width="375" height="812"/>
        <namedColor name="backgroundImage">
            <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
        </namedColor>
        <namedColor name="default">
            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
        </namedColor>
        <systemColor name="systemGray6Color">
            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
        </systemColor>
    </resources>
</document>
